--- a/package.json
+++ b/package.json
@@ -13,14 +13,22 @@
     "@faker-js/faker": "^9.6.0",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tinymce/tinymce-react": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv": "^6.3.11",
+    "framer-motion": "^12.5.0",
+    "html-react-parser": "^5.2.2",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
+    "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.7.15",
+    "nuqs": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sanitize-html": "^2.14.0",
     "slug": "^10.0.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "unlazy": "^0.12.3"
@@ -31,6 +39,7 @@
     "@types/node": "^20.17.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.13.0",
     "@types/slug": "^5.0.9",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
