--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@tinymce/tinymce-react": "^6.0.0",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv": "^6.3.11",
     "framer-motion": "^12.5.0",
     "html-react-parser": "^5.2.2",
+    "ky": "^1.7.5",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
@@ -31,7 +34,9 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "unlazy": "^0.12.3"
+    "unlazy": "^0.12.3",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
