Implement Search & Filtering Components
- Built a custom search box with debounced input, storing the query param in the URL
- Implemented hierarchical filtering (make → model → model variant)
- Created an API route to dynamically fetch make/model options based on prior selections
- Used Zod to parse and sanitize query parameters, preventing invalid or extraneous values
- Developed numeric range filters with min/max fields (year, price, odoReading)
- Ensured the UI is fully responsive and accessible
- Optimized database queries using Prisma’s `where` filtering for efficient lookups
- Applied conditional spreading in query construction to prevent unnecessary filters

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tinymce/tinymce-react": "^6.0.0",
@@ -20,16 +22,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv": "^6.3.11",
+    "debounce": "^2.2.0",
     "framer-motion": "^12.5.0",
     "html-react-parser": "^5.2.2",
     "ky": "^1.7.5",
     "lucide-react": "^0.479.0",
-    "next": "15.2.2",
+    "next": "15.2.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "sanitize-html": "^2.14.0",
     "slug": "^10.0.0",
     "sonner": "^2.0.1",
@@ -43,12 +46,14 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.17.24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4",
     "@types/sanitize-html": "^2.13.0",
     "@types/slug": "^5.0.9",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
+    "eslint-config-next": "15.2.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
@@ -57,5 +62,9 @@
   },
   "prisma": {
     "seed": "ts-node -r tsconfig-paths/register --compiler-options {\"module\":\"CommonJS\"} prisma/seed/seed.ts"
+  },
+  "overrides": {
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4"
   }
 }
