--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "csv": "^6.3.11",
     "debounce": "^2.2.0",
     "framer-motion": "^12.5.0",
+    "fslightbox-react": "^1.8.0",
     "html-react-parser": "^5.2.2",
     "ky": "^1.7.5",
     "lucide-react": "^0.479.0",
@@ -40,6 +41,7 @@
     "sanitize-html": "^2.14.0",
     "slug": "^10.0.0",
     "sonner": "^2.0.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "unlazy": "^0.12.3",
@@ -49,6 +51,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/fslightbox-react": "^1.8.0",
     "@types/node": "^20.17.24",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
