--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "george": "prisma db push && prisma generate"
   },
   "dependencies": {
+    "@auth/core": "^0.38.0",
+    "@auth/prisma-adapter": "^2.8.0",
     "@faker-js/faker": "^9.6.0",
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
@@ -24,6 +26,7 @@
     "@tinymce/tinymce-react": "^6.0.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.5",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv": "^6.3.11",
@@ -35,6 +38,7 @@
     "ky": "^1.7.5",
     "lucide-react": "^0.479.0",
     "next": "15.2.3",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.4.1",
