--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,16 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@/env": ["./env.mjs"]
+      "@/env": ["./env.mjs"],
+      "@/auth": ["./auth"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-auth.d.ts",
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
